kustomize/base/globex-route-globex-mobile-gateway.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globex-mobile-gateway
  namespace: globex
  labels:
    app.kubernetes.io/name: globex-mobile-gateway
    app.kubernetes.io/instance: globex-user1
    app.kubernetes.io/version: "latest"
spec:
  to:
    kind: Service
    name: globex-mobile-gateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
